--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#AE3C3C</color>
+    <color name="green">#22D11B</color>
+
+
 
 
     <style name="EditTextInputStyle" parent="Widget.AppCompat.EditText" >
@@ -27,10 +31,12 @@
 
 
     <style name="TextViewStyle" parent="Widget.AppCompat.TextView">
-        <item name="android:textSize">22sp</item>
+        <item name="android:textSize">23sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_marginEnd">10dp</item>
+        <item name="android:layout_marginTop">15dp</item>
 
     </style>
 </resources>
